--- a/mainpage.css
+++ b/mainpage.css
@@ -53,7 +53,7 @@ body{
   }
   .subnavbar ul li{
     border-right: white 1px solid;
-      padding: 8px 9px;
+      padding: 8px 20px;
       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
     /* .subnavbar li {
@@ -65,7 +65,7 @@ body{
     } */
     .subnavbar ul li:last-child {
       border-right: none;
-      padding: 5px 9px;
+      padding: 5px 0px;
       
   }
   .subnavbar ul li .search {
@@ -97,10 +97,10 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-size: 12px;
+    font-size: 16px;
     margin: auto;
     width: 967px;
-  }
+}
   .items ul {
     display: flex;
     justify-content: space-between;
@@ -117,12 +117,12 @@ body{
   }
   .items ul li {
     list-style-type: circle;
-    padding-right: 24px;
+    padding-right: 35px;
     color: rgb(96, 103, 132);
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 14px;
-    letter-spacing: 0.3;
-  }
+    font-size: 13px;
+    letter-spacing: 0.3px;
+}
   .image2 {
     display: flex;
     justify-content: space-between;
@@ -140,7 +140,7 @@ body{
   }
   .content {
     margin: auto;
-    width: 960px;
+    width: 967px;
   }
   .dining {
     width: 101%;
@@ -153,7 +153,7 @@ body{
   }
   .images .altimg {
     width: 670px;
-    position: relative;
+    /* position: relative; */
     height: 100%;
   }
   
@@ -166,20 +166,20 @@ body{
     margin-left: 0px;
   }
   .table {
-    padding: 24px;
+    padding: 26px;
     border: 2px solid #565553;
     line-height: 13px;
   }
   .table h1 {
-    font-size: 21px;
+    font-size: 32px;
     color: #FFFFFF;
     color: #F9F7F8;
-    font-weight: lighter;
+    font-weight: 200;
   }
   .table p {
-    font-size: 12px;
-    color: #82817F;
-    line-height: 17px;
+    font-size: 14px;
+    color: #9A9899;
+    line-height: 22px;
   }
   .table ul {
     font-size: 12px;
@@ -188,15 +188,15 @@ body{
     padding: 0px;
   }
   .table li {
-    padding-bottom: 10px;
+    padding-bottom: 8px;
     border-bottom: 1px solid #504F4D;
-    padding-top: 13px;
-    color: #E6E4E5;
+    padding-top: 10px;
+    color: #DBD9DA;
     font-size: 14px;
-  }
+}
   .table a {
-    color: #6F6E6C;
-    font-size: 11px;
+    color: #8F8C8D;
+    font-size: 12px;
   }
   .middlecontent {
     background-color: white;
@@ -224,7 +224,6 @@ body{
     background-position: bottom right;
   } 
   .maincontent {
-    padding-top: 0px;
     margin-bottom: 15px;
     height: 140px;
     border-right: 1px solid #E1E1E1;
@@ -241,7 +240,7 @@ body{
     font-size: 12px;
     padding: 0px 12px;
     margin-top: 2px;
-    color: #82817F;
+    color: #949494;;
     font-family: Segoe UI;
   }
   .link {
@@ -255,12 +254,12 @@ body{
     padding: 0px 165px 0px 10px;
     font-size: 10px;
     font-family: Segoe UI;
-    color: #606579;
+    color: #949494;;
     letter-spacing: 0.3px;
   }
   .clearence .wwww {
     font-size: 13px;
-    color: rgb(96, 103, 132);
+    color: #606579;
   }
   .footer {
     margin-bottom: 30px;
@@ -291,26 +290,25 @@ body{
     margin-top: 0px;
     margin-bottom: 0px;
     font-size: 12px;
+    letter-spacing: 0.2px;
   }
   .footer-content .contact a {
     color: #8D8D8B;
   }
   .footer-content .copyrights {
     color: #8D8D8B;
-    padding-top: 8px;
+    padding-top: 5px;
     padding-left: 0px;
     margin-top: 0px;
     font-size: 12px;
   }
   .signup p {
     color: #8D8D8B;
-    padding-top: 0px;
-    padding-left: 0px;
     margin-bottom: 0px;
     font-size: 12px;
   }
   .mail {
-    margin-top: 5px;
+    margin-top: 8px;
   }
   .signup .mail .username {
     font-size: 10px;
@@ -366,4 +364,13 @@ body{
   .header ul li{
     letter-spacing: 0.5px;
   }
-  
+  .table ul li:last-child {
+    border-bottom: none;
+    padding-bottom: 15px;
+}
+#dining{
+    padding-left: 8px;
+}
+b{
+    color: #2D2C4F;
+}
