--- a/mainpage.css
+++ b/mainpage.css
@@ -72,8 +72,7 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex-direction: row;
-    margin-left: 15px;
+    margin-left: 35px;
   }
   .subnavbar ul li .search .searchbar input {
     font-size: 10px;
@@ -81,8 +80,8 @@ body{
     width: 140px;
     border-bottom: none;
     border-right: none;
-    border-top: 2px solid rgb(135, 133, 134);
-    border-left: 2px solid rgb(135, 133, 134);
+    border-top: 2px solid #989798;
+    border-left: 2px solid #989798;
   }
   .subnavbar ul li .search .Button button {
     border-radius: 5px;
@@ -97,7 +96,6 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-size: 16px;
     margin: auto;
     width: 967px;
 }
@@ -105,7 +103,6 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex-direction: row;
     padding: 0px;
     margin-left: 7px;
   }
@@ -127,7 +124,6 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex-direction: row;
     margin-right: 30px;
   }
   .imagelogo {
@@ -184,7 +180,6 @@ body{
   .table ul {
     font-size: 12px;
     list-style-type: none;
-    text-decoration: none;
     padding: 0px;
   }
   .table li {
@@ -203,7 +198,6 @@ body{
     display: flex;
     width: 100%;
     border: 5px solid black;
-    height: 170px;
   }
   .stemware{
     background-image: url(assets/promo_glass.png);
@@ -233,7 +227,7 @@ body{
     font-weight: 400;
     letter-spacing: 0.2px;
     font-family: Segoe UI;
-    padding: 0px 22px 3px 10px;
+    padding: 0px 22px 0px 10px;
     margin-bottom: 0px;
   }
   .text {
@@ -246,22 +240,24 @@ body{
   .link {
     font-size: 13px;
     color: #606579;
-    padding: 0px 10px 0px 0px;
+    padding: 0px 20px 0px 0px;
     font-family: Segoe UI;
     float: right;
     text-decoration: none;
 }
   .clearence p {
-    padding: 0px 165px 0px 10px;
-    font-size: 10px;
+    padding: 0px 140px 0px 10px;
+    font-size: 12px;
     font-family: Segoe UI;
     color: #949494;;
-    letter-spacing: 0.3px;
   }
   .clearence .wwww {
+    text-decoration: none;
     font-size: 13px;
     color: #606579;
-  }
+    padding-left: 10px;
+    font-family: Segoe UI;
+}
   .footer {
     margin-bottom: 30px;
     justify-content: space-between;
@@ -284,7 +280,7 @@ body{
     color: #6F6E6C;
     padding: 5px;
   }
-  .footerdata .contact {
+  .footerdata .enquiry {
     color: #8D8D8B;
     padding-top: 8px;
     padding-left: 0px;
@@ -293,7 +289,7 @@ body{
     font-size: 12px;
     letter-spacing: 0.2px;
   }
-  .footerdata .contact a {
+  .footerdata .enquiry a {
     color: #8D8D8B;
   }
   .footerdata .copyrights {
